[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redactive-test-app"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Robert Koch", email = "robert@kochie.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "redactive",
  "asyncclick",
  "setuptools",
  "pydantic"
]


[project.urls]
Documentation = "https://github.com/unknown/redactive-test-app#readme"
Issues = "https://github.com/unknown/redactive-test-app/issues"
Source = "https://github.com/unknown/redactive-test-app"

[tool.hatch.version]
path = "src/redactive_test_app/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[tool.hatch.metadata]
allow-direct-references = true

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/redactive_test_app tests}"

[tool.coverage.run]
source_pkgs = ["redactive_test_app", "tests"]
branch = true
parallel = true
omit = [
  "src/redactive_test_app/__about__.py",
]

[tool.coverage.paths]
redactive_test_app = ["src/redactive_test_app", "*/redactive-test-app/src/redactive_test_app"]
tests = ["tests", "*/redactive-test-app/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[project.scripts]
redactive_test_app = "redactive_test_app.main:cli"
