[build-system]
requires = [
    "setuptools>=60",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"
python_files = "*.py"
python_classes = "*Tests"
python_functions = "test_*"
