[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redactive"
readme = "README.md"
dynamic = ["version"]
description = "Redactive Python SDK"
authors = [{ name = "Redactive ai", email = "support@redactive.ai" }]
keywords = []
requires-python = ">=3.11"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pydantic",
    "betterproto[compiler]==2.0.0b6",
    "grpclib[protobuf]",
    "httpx",
]

[project.optional-dependencies]
reranking = [
    "rerankers",
    "rerankers[transformers]"
]

[project.urls]
Homepage = "https://github.com/redactive-ai/redactive"
Issues = "https://github.com/redactive-ai/redactive/labels/sdk:python"
Source = "https://github.com/redactive-ai/redactive"

[tool.hatch.version]
path = "src/redactive/__about__.py"

[tool.hatch.envs.hatch-test]
extra-dependencies = ["pytest", "pytest-asyncio", "pytest-httpx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"
python_files = "*.py"
python_classes = "*Tests"
python_functions = "test_*"

[tool.hatch.envs.types]
extra-dependencies = ["redactive>=1.0.0", "pyright", "rerankers", "rerankers[transformers]"]

[tool.hatch.envs.types.scripts]
check = "pyright"

[tool.pyright]
include = ["src"]
exclude = ["src/redactive/grpc/*/__init__.py"]
typeCheckingMode = "standard"

[tool.ruff]
line-length = 120
include = ["src/*", "tests/*"]

[tool.ruff.lint]
extend-select = [
    "I",  # isort
    "UP", # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
# Generated gRpc code
"**/redactive/grpc/*" = ["UP", "RUF009", "TCH004", "ARG002"]
"tests/*" = ["INP", "S"]
