[metadata]
name = redactive
version = 0.0.5
author = redactive.ai
description =
keywords =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/redactive-ai/redactive
project_urls =
    Bug Tracker = https://github.com/redactive-ai/redactive/labels/sdk:python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.10
install_requires =
    pydantic
    betterproto[compiler]==2.0.0b6
    grpclib[protobuf]
    httpx

[options.extras_require]
tests =
    pytest
    pytest-asyncio
    pytest-httpx

[options.packages.find]
where = src
